# axon

./: .gitignore  Cargo.toml  README.md  example_config.toml
src/: config.rs  input.rs  main.rs  rpc.rs  utils.rs
src/tui/: mod.rs  panels.rs  view.rs  widgets.rs
src/tui/panels/: login.rs  torrent_details.rs
src/utils/: align.rs  color.rs  filter.rs  fmt.rs  mod.rs
src/view/: mod.rs
src/view/tui/: mod.rs  widgets.rs
