[package]
name = "axon"
version = "0.2.0"
edition = "2018"
authors = ["Jonathan Schleußer <paradoxspiral@riseup.net>"]

[dependencies]
bytes = "0.4"
chrono = "0.4"
futures = "0.1"
lazy_static = "1"
natord = "1"
parking_lot = "0.7"
synapse-rpc = "=0.1.20"
serde = "1"
serde_derive = "1"
serde_json = "1"
shellexpand = "1"
# Temporary until https://gitlab.redox-os.org/redox-os/termion/merge_requests/153 merged
termion = {version="*", git = "https://gitlab.redox-os.org/ParadoxSpiral/termion.git"}
tokio = "0.1"
tokio-tungstenite = "0.6"
toml = "0.4"
unicode-segmentation = "1"
unicode-width = "0.1"
url = "1"

slog = { version = "2", optional = true, features = ["max_level_trace", "release_max_level_trace"] }
slog-term = { version = "2", optional = true }
slog-async = { version = "2", optional = true }

[features]
dbg = ["slog", "slog-term", "slog-async"]

[profile.release]
lto = true
opt-level = 3
